# googol.rs

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  example.googol.toml  flake.nix  index.html  makefile
.github/workflows/: bench.sh  docs.sh  docs.yml  index.html  pages.yml
benches/: top_searches_benchmark.rs
docs/: index.html  relatorio.md
docs/search/: index.html
docs/status/: index.html  style.css
examples/: create-file.rs  fishfish.rs  helloworld-grpc-client.rs  helloworld-grpc-server.rs  logger.rs  serialize-index.rs  test-web-server-endpoints.sh  top_searches.rs  url-host.rs
examples/config/: barrel.toml  client.toml  downloader.toml  gateway.toml  web-server.toml
hosts/: default.nix
hosts/machine1/: configuration.nix
hosts/machine2/: configuration.nix
hosts/machine3/: configuration.nix  hardware.nix
pkgs/: default.nix
pkgs/vm/: default.nix  vm.sh
protos/: googol.proto
spawn-googol/: default.nix  spawn-googol.sh
src/: address.rs  barrel.rs  index_store.rs  interactive.rs  lib.rs  logger.rs  top_searches.rs  url.rs
src/barrel/: index.rs  mod.rs
src/fishfish/: mod.rs
src/fishfish/domain/: category.rs  mod.rs
src/gateway/: load_balancer.rs  mod.rs  queue.rs  status.rs
src/page/: mod.rs  web_server.rs
src/serde/: host.rs
src/settings/: barrel.rs  client.rs  downloader.rs  gateway.rs  mod.rs  web_server.rs
static/: index.html  script.js  style.css
static/demo/: index.html
static/search/: index.html  script.js  style.css
static/status/: index.html  script.js
static/web/: script.js
(+2 files in other folders)
