[package]
name = "googol"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
actix-ws = "0.3.0"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
config = "0.15.11"
futures = "0.3.31"
log = "0.4.27"
pretty_env_logger = "0.5.0"
prost = "0.13.5"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
scraper = "0.23.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "full"] }
toml = "0.8.22"
tonic = "0.13.0"
url = { version = "2.5.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.13.0"
